# parcel_iq

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHECKLIST.md  CLAUDE.md  Makefile  QUICKSTART.md  README.md  TESTING.md  docker-compose.yml  package.json  pnpm-lock.yaml  test_pydantic.py  test_stats.py  turbo.json
apps/admin-web/: Dockerfile  (+3 more)
docs/: 01-system-architecture.md  02-frontend.md  03-api-gateway.md  04-database.md  05-scraper-worker.md  06-llm-parser-worker.md  07-legal-compliance.md  08-admin-console.md  09-local-dev.md  10-testing-strategy.md  11-first-time-data-population.md  12-school-data-sources.md  current_data_flow.md  deployment-guide.md
services/admin-backend/: .env.example  Dockerfile  pyproject.toml  run_test.py
services/admin-backend/app/: celery.py  config.py  dependencies.py  main.py
services/admin-backend/app/core/: database.py  service_auth.py
services/admin-backend/app/routers/: analytics.py  data_sources.py  lgas.py  properties.py  queue.py  reconciliation.py  reports.py  stats.py  tasks.py  users.py
services/admin-backend/app/schemas/: analytics.py  data_sources.py  lgas.py  properties.py  queue.py  reports.py  scrape.py  stats.py
services/admin-backend/app/services/: __init__.py  report_pdf_storage.py
services/admin-backend/tests/: conftest.py
services/admin-backend/tests/integration/: test_data_sources.py  test_health.py  test_reports.py  test_scrape.py  test_users.py
services/admin-backend/tests/unit/: test_schemas.py  test_service_auth.py
services/llm-parser-worker/: .env.example  Dockerfile  pyproject.toml
services/llm-parser-worker/app/: celery_app.py  config.py  tasks.py
services/llm-parser-worker/app/prompts/: system_prompt.py  user_prompt.py
services/llm-parser-worker/app/schemas/: confidence.py  llm_output.py
services/llm-parser-worker/app/services/: db.py  email.py  llm_client.py  rate_limiter.py
services/llm-parser-worker/scripts/: test_prompt.py  test_timeout.py  test_timeout_auto.py  verify_gemini_live.py
services/llm-parser-worker/tests/: conftest.py
services/llm-parser-worker/tests/integration/: test_task_pipeline.py
services/llm-parser-worker/tests/unit/: test_celery_config.py  test_confidence_scoring.py  test_llm_output_validation.py  test_prompts.py  test_rate_limiter.py  test_tasks.py
services/public-api/: .env.example  Dockerfile  pyproject.toml
services/public-api/app/: celery.py  config.py  dependencies.py  main.py
services/public-api/app/core/: clerk.py  credits.py  database.py  quota.py  rate_limit.py
services/public-api/app/middleware/: security_headers.py  turnstile.py
services/public-api/app/routers/: credit_purchases.py  credits.py  health.py  my_properties.py  payments.py  properties.py  saved.py  schools.py  search.py  sitemap.py  users.py  zones.py
services/public-api/app/schemas/: credit.py  payment.py  property.py  schools.py  search.py  user.py  zones.py
services/public-api/app/services/: abs_census.py  email_service.py  property_service.py  stripe_service.py
services/public-api/tests/: conftest.py
services/public-api/tests/integration/: test_claim.py  test_credits.py  test_health.py  test_payments.py  test_properties.py  test_saved.py  test_search.py  test_users.py  test_webhook.py
services/public-api/tests/unit/: test_checkout_validation.py  test_clerk.py  test_credits.py  test_rate_limit.py  test_schemas.py  test_teaser.py
services/scraper-worker/: .env.example  BROWSER_ADAPTER_GUIDE.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  REFACTORING_COMPLETE.md  pyproject.toml  test_adapters.py
services/scraper-worker/app/: __init__.py  celery_app.py  config.py  tasks.py  tasks_census_refresh.py
services/scraper-worker/app/adapters/: base.py  browser_base.py  registry.py  runner.py
services/scraper-worker/app/adapters/council/: generic_html.py  objective.py  tech_one.py
services/scraper-worker/app/adapters/national/: abs_census.py  nbnco.py
services/scraper-worker/app/adapters/state/: generic_state.py  vic_plan.py
services/scraper-worker/app/services/: abs_census_db.py  db.py  minio_client.py  proxy.py  schools_enrichment.py  scraper_rate_limiter.py  vic_plan_db.py
services/scraper-worker/app/utils/: pdf_extract.py  pii.py  retry.py  robots.py
services/scraper-worker/tests/: conftest.py
services/scraper-worker/tests/integration/: README.md  __init__.py  conftest.py  test_adapter_tasks.py
services/scraper-worker/tests/manual/: README.md  VERIFICATION.md  __init__.py  conftest.py  demo_adapter_real_browser.py  demo_real_browser_simple.py  test_real_browser.py
services/scraper-worker/tests/unit/: test_abs_adapter_caching.py  test_base_adapter.py  test_celery_config.py  test_national_adapters.py  test_pdf_extract.py  test_pii.py  test_proxy.py  test_registry.py  test_retry.py  test_robots.py  test_runner.py  test_state_adapters.py  test_task.py
shared/pdf-renderer/: pyproject.toml
shared/pdf-renderer/pdf_renderer/: __init__.py  full_report.py  lite_report.py  storage.py
shared/py-types/: pyproject.toml
shared/py-types/parceliq_types/: __init__.py  confidence.py  llm_output.py  scraped_data.py
tmp/: db_cols.py
(+190 files in other folders)
