[project]
name = "ozpr-admin-backend"
version = "1.0.0"
description = "OZ Property Report admin backend API (internal only)"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "asyncpg>=0.30,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "httpx>=0.28,<1",
    "celery>=5.4,<6",
    "redis>=5,<6",
    "minio>=7.2,<8",
    "reportlab>=4.2,<5",
    "ozpr-pdf-renderer @ file:///home/thanhtran/Projects/parcel_iq/shared/pdf-renderer",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6,<7",
    "httpx",          # TestClient transport
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
