[project]
name = "ozpr-llm-parser-worker"
version = "1.0.0"
description = "OZ Property Report LLM parser worker — OpenAI Chat Completions + confidence scoring"
requires-python = ">=3.12"

dependencies = [
    "celery[redis]>=5.4,<6",
    "redis>=5,<6",
    "psycopg2-binary>=2.9,<3",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "ozpr-types",
    "requests>=2.31,<3",
    "resend>=2.30.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=6,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
ozpr-types = { path = "../../shared/py-types", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
