[project]
name = "ozpr-public-api"
version = "1.0.0"
description = "OZ Property Report investor-facing REST API"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "asyncpg>=0.30,<1",
    "pydantic[email]>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "python-jose[cryptography]>=3.3,<4",
    "httpx>=0.28,<1",
    "slowapi>=0.1.9,<1",
    "resend>=2,<3",
    "celery[redis]>=5.4,<6",
    "stripe>=11,<12",
    "reportlab>=4.2,<5",
    "ozpr-pdf-renderer @ file:///home/thanhtran/Projects/parcel_iq/shared/pdf-renderer",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6,<7",
    "httpx",          # TestClient transport
    "respx>=0.22,<1", # httpx mocking for Clerk JWKS
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.hatch.metadata]
allow-direct-references = true
