[project]
name = "ozpr-scraper-worker"
version = "1.0.0"
description = "OZ Property Report scraper worker — Celery tasks + Playwright adapters"
requires-python = ">=3.12"

dependencies = [
    "celery[redis]>=5.4,<6",
    "redis>=5,<6",
    "psycopg2-binary>=2.9,<3",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "httpx>=0.28,<1",
    "playwright>=1.42,<2",
    "pdfminer.six>=20231228",
    "minio>=7.2,<8",
    "ozpr-types",
    "flower>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=6,<7",
    "responses>=0.25,<1",
    "sqlalchemy>=2.0,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
ozpr-types = { path = "../../shared/py-types", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
