[project]
name = "ozpr-pdf-renderer"
version = "0.1.0"
description = "Shared PDF report generator for OZ Property Report"
requires-python = ">=3.12"

dependencies = [
    "reportlab>=4.2,<5",
    "httpx>=0.28,<1",
    "minio>=7.0,<8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pdf_renderer"]
