[project]
name = "ozpr-types"
version = "0.1.0"
description = "Shared Pydantic models for OZ Property Report services"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["parceliq_types"]
